# McSynServer

./: Cargo.toml  README.md  config.yml
api/pe/player/: 8fe4f284-2852-3f44-aec8-9fd73d159ed8.nbt
locales/: en.yml
src/: config.rs  main.rs
src/api/: mod.rs
src/api/money/: mod.rs  money.rs  single_economy.rs
src/api/pe/: mod.rs  player.rs  player_api.rs  server.rs  session.rs  world.rs
src/sql/: mod.rs  multi_economy.rs  single_economy.rs
src/sql/sqlite/multi_economy/: add_money.sql  add_pl_money.sql  delete_money.sql  delete_money_key.sql  get_all_money.sql  get_money.sql  get_money_key.sql  init.sql  updata_money.sql  update_money_key_name.sql  update_money_name.sql
src/sql/sqlite/single_economy/: add_pl.sql  get_money.sql  init.sql  updata_money.sql
