[package]
name = "ws_actor_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"

tokio = { version = "1", features = ["full"] }

rand = "0.8.5"

chrono = "0.4.35"
rust-i18n = "3.0.1"
serde_yaml = "0.9.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.88"

log = "0.4"
env_logger = "0.11"
